hphp/hack/test/typecheck/enum_class_label/call_missing_label_like_class.php.rust_elab.exp
File "call_missing_label_like_class.php", line 3, characters 12-12:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "call_missing_label_like_class.php", line 11, characters 15-21:
Enum class `E` does not contain a label named `classy`. (Typing[4394])
  File "call_missing_label_like_class.php", line 3, characters 12-12:
  `E` is defined here
  File "call_missing_label_like_class.php", line 4, characters 10-20:
  Did you mean `#very_classy`?
  File "call_missing_label_like_class.php", line 7, characters 41-41:
  This is why I expected an enum class label from `E`.
